app/javascript/src/styles/components/post_thumbnail_component.scss
$image-size: var(--thumb-image-size, 150px);
$image-min: var(--thumb-image-min, 135px);
$image-max: var(--thumb-image-max, 165px);
$font-stack: "Roboto", Verdana, Geneva, sans-serif;


// ============================== //
// ====== Posts Container ======= //
// ============================== //

section.posts-container {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 0.5rem;

  // Dynamic grid
  // On mobile, the grid is driven by the column count, although thumbnails are still limited
  // in size by the --thumb-image-size variable to prevent images from stretching.
  // On desktop, all thumbnails are the same size, and the grid auto-fills based on that size.
  --thumb-image-size: 200px;
  --thumb-image-min: 180px;
  --thumb-image-max: 220px;
  @include window-larger-than(800px, $or-equal: true) {
    grid-template-columns: repeat(auto-fill, minmax(#{$image-min}, 1fr));
  }

  article.thumbnail {
    width: unset;
    a.thm-link, .thm-desc, .thm-extra {
      width: 100%;
      max-width: $image-max;
    }
  }

  // Headers and placeholders
  h2.posts-container-header, .no-results { grid-column: -1 / 1; }
}


// ============================== //
// ====== Thumbnail Proper ====== //
// ============================== //

article.thumbnail {
  display: flex;
  flex-flow: column;
  align-items: center;
  width: min-content; // Avoid stretching when outside the posts-container

  a.thm-link {
    display: block;
    width: $image-size;
    max-width: 100%;
    aspect-ratio: 1;
    position: relative;

    background: #0003; // For transparent and cropped images
    overflow: hidden; // Get rounded corners to work on the image
    box-sizing: border-box; // Avoid borders overflowing
    @include st-radius-top;

    img {
      width: 100%;
      height: 100%;
      object-fit: cover;
      pointer-events: none; // Direct all clicks to the link
    }
  }

  &.no-stats a.thm-link { @include st-radius; }
  &.inline {
    display: inline-flex;
    vertical-align: middle;
  }

  // Renders thumbnails in something resembling their native aspect ratio.
  // Only really useful for DText thumbnails.
  &.native {
    a.thm-link {
      width: unset;
      height: unset;
      aspect-ratio: unset;

      img {
        width: auto;
        height: unset;
        object-fit: cover;
        max-width: var(--thumb-image-size, 150px);
        max-height: var(--thumb-image-size, 150px);
        min-width: 100px;
        min-height: 100px;
      }
    }
    &.blacklisted a.thm-link::before,
    &.deleted a.thm-link::before {
      font-size: calc(var(--thumb-image-size, 150px) / 10);
    }

    div.thm-desc { display: none; }

    &.deleted {
      a.thm-link {
        width: var(--thumb-image-size, 150px);
        aspect-ratio: 1;
      }
    }
  }
}

// Post information bar
article.thumbnail .thm-desc {
  display: grid;
  grid-template-columns: auto 1.25rem;
  width: $image-size;
  max-width: 100%;

  font-size: 0.75rem;
  line-height: 0.75rem;
  font-weight: bold;
  font-family: $font-stack;

  background-color: orange;
  border-radius: 0 0 0.25rem 0.25rem;
  overflow: hidden; // Hide the box-shadow on .desc-a

  // Rating-dependent colors
  @each $name, $color in ("e": "red", "q": "yellow", "s": "green") {
    &.thm-rating-#{$name} { background-color: palette("background-#{$color}"); }
  }

  // Column A: score, favorites, comments
  &-a {
    display: flex;
    column-gap: 5%;
    justify-content: center;
    padding: 0.25rem;

    @include st-radius-bottom;
    background: themed("color-section-lighten-5");
    overflow: hidden;
    box-shadow: 0 0 0.25rem #0005;
  }

  // Column B: rating
  &-b {
    padding: 0.25rem 0;
    text-align: center;
  }
}

// Post information badges (score, favs, comments)
article.thumbnail .thm-desc-m {
  display: flex;
  justify-content: center;
  gap: 0.125rem;
  flex-shrink: 1;

  svg {
    height: 1rem;
    width: 1rem;
    margin: -0.125rem 0;
  }

  // Score
  &.thm-score {
    &-positive { color: palette("text-green"); }
    &-negative { color: palette("text-red"); }
    svg {
      height: 0.9rem;
      margin: -0.075rem 0;
    }
  }

  // Fav
  &.thm-favorites {
    color: palette("background-gold-d10");
    svg {
      height: 0.9rem;
      width: 0.95rem;
      margin: -0.075rem 0;
    }
  }

  // Comments
  &.thm-comments {
    svg {
      height: 0.75rem;
      margin: 0;
    }
  }
}
article.thumbnail[data-is-favorited="true"] .thm-desc-m.thm-favorites svg {
  filter: url(#inset-shadow);
  fill: palette("background-gold-d10");
  stroke-width: 0;
}

// Badges
article.thumbnail[data-tags~=animated] {
  & > a.thm-link:after {
    content: "ANIM";

    position: absolute;
    z-index: 5;
    left: 0;
    top: 0.5rem;
    padding: 0.125rem 0.25rem;

    width: 2.125rem; // Inferred height: 1rem
    font-size: 0.5rem;
    line-height: 0.5rem;
    padding: 0.25rem 0; // Vertically centered

    background-color: themed("color-section");
    color: themed("color-text");
    font-weight: bold;
    text-align: center;

    @include st-radius-right;
  }
  &[data-file-ext=webm] > a.thm-link:after { content: "WEBM"; }
  &[data-file-ext=mp4] > a.thm-link:after { content: "MP4"; }

  &.no-type-badges > a.thm-link:after { display: none; }
}

// Extra info (IQDB, pools)
article.thumbnail .thm-extra {
  width: $image-size;
  max-width: 100%;
  font-family: $font-stack;
  overflow: hidden;

  background: themed("color-section-lighten-5");
  @include st-radius;
  text-align: center;

  padding: 0.25rem;
  margin-top: 0.25rem;
  box-sizing: border-box;

  a.pool-link {
    width: 100%;
    display: block;
    font-size: 1rem;
    word-break: break-word; // Otherwise long pool names break the layout
  }
}
/* ... */

